syntax = "proto3";

option java_package = "com.anma.grpc";

message PersonRequest {
  string name = 1;
}

message Person {
  string name = 1;
  int32 age = 2;
}

message PersonResponse {
  Person person = 1;
}

service PersonService {
  rpc GetPerson(PersonRequest) returns (PersonResponse) {}
}